code/force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <label>經營計劃</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Account Plan No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>