code/force-app/main/default/objects/Account_Plan__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>審批狀態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>尚未審核</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <label>審核中</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>退回</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>已審核</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>