code/force-app/main/default/objects/Account_Plan__c/fields/Bank_Prof_Investor__c.field-meta.xml
<CustomField>
    <fullName>Bank_Prof_Investor__c</fullName>
    <label>是否有本行專業投資人資格</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>