code/force-app/main/default/objects/Account_Plan__c/fields/Buyer_Credit_Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Credit_Card_Payment__c</fullName>
    <label>需提供買家信用卡支付功能</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>