code/force-app/main/default/objects/Account_Plan__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>本次申請案件類型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Type</valueSetName>
    </valueSet>
</CustomField>