code/force-app/main/default/objects/Account_Plan__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <label>他行金交額度是否有擔保品</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>