code/force-app/main/default/objects/Account_Plan__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <formula>Account__r.Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>公司統編</label>
    <type>Text</type>
</CustomField>