code/force-app/main/default/objects/Account_Plan__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <label>公司全名</label>
    <type>Text</type>
</CustomField>