code/force-app/main/default/objects/Account_Plan__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>公司型態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Company_Type</valueSetName>
    </valueSet>
</CustomField>