code/force-app/main/default/objects/Account_Plan__c/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <label>授信類型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Credit_Type</valueSetName>
    </valueSet>
</CustomField>