code/force-app/main/default/objects/Account_Plan__c/fields/Customer_Prod_Sales_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_Prod_Sales_Model__c</fullName>
    <label>客戶產銷模式</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Prod_Sales_Model</valueSetName>
    </valueSet>
</CustomField>