code/force-app/main/default/objects/Account_Plan__c/fields/Domestic_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Receipt__c</fullName>
    <label>內銷收款方式</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Domestic_Receipt</valueSetName>
    </valueSet>
</CustomField>