code/force-app/main/default/objects/Account_Plan__c/fields/Export_Percent__c.field-meta.xml
<CustomField>
    <fullName>Export_Percent__c</fullName>
    <label>外銷比例%</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>