code/force-app/main/default/objects/Account_Plan__c/fields/Group_Plan__c.field-meta.xml
<CustomField>
    <fullName>Group_Plan__c</fullName>
    <label>集團計劃</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>