code/force-app/main/default/objects/Account_Plan__c/fields/Last_Yr_Fin_Report_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Yr_Fin_Report_Revenue__c</fullName>
    <label>公司近一年完整年度財報營收 (億元)</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>