code/force-app/main/default/objects/Account_Plan__c/fields/Next_Annual_Review_Month__c.field-meta.xml
<CustomField>
    <fullName>Next_Annual_Review_Month__c</fullName>
    <formula>Account__r.Next_Review_Month__c</formula>
    <label>下次應辦理年審月份</label>
    <type>Text</type>
</CustomField>