code/force-app/main/default/objects/Account_Plan__c/fields/OBU_Company__c.field-meta.xml
<CustomField>
    <fullName>OBU_Company__c</fullName>
    <label>公司為OBU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>