code/force-app/main/default/objects/Account_Plan__c/fields/Other_Bank_Factoring__c.field-meta.xml
<CustomField>
    <fullName>Other_Bank_Factoring__c</fullName>
    <label>他行曾/已承作應收帳款融資</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>