code/force-app/main/default/objects/Account_Plan__c/fields/Other_Bank_PSR_Limit__c.field-meta.xml
<CustomField>
    <fullName>Other_Bank_PSR_Limit__c</fullName>
    <label>他行是否有金交額度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>