code/force-app/main/default/objects/Account_Plan__c/fields/Outsourcing_Payment__c.field-meta.xml
<CustomField>
    <fullName>Outsourcing_Payment__c</fullName>
    <label>外購付款方式</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Outsourcing_Payment</valueSetName>
    </valueSet>
</CustomField>