code/force-app/main/default/objects/Account_Plan__c/fields/Payment_Recipients_AAC_Need_DPC__c.field-meta.xml
<CustomField>
    <fullName>Payment_Recipients_AAC_Need_DPC__c</fullName>
    <label>收款對象眾多且有自動銷帳或多元化收款通路需求</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>