code/force-app/main/default/objects/Account_Plan__c/fields/Salary_Account__c.field-meta.xml
<CustomField>
    <fullName>Salary_Account__c</fullName>
    <label>本行薪轉戶</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>