code/force-app/main/default/objects/Account_Plan__c/fields/Sales_Target_is_a_Natural_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target_is_a_Natural_Person__c</fullName>
    <label>銷售對象為自然人且非預付性質且非第三方支付公司</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>