code/force-app/main/default/objects/Account_Plan__c/fields/Ship_To_Sales_Target_SC_Fin__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Sales_Target_SC_Fin__c</fullName>
    <label>出貨給本行配合供應鏈融資專案的銷貨對象 (特力屋、喬山等)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>